# dfgraph

./: .gitignore  README.md  apple.db  fill.py  mkdocs.yml  setup.cfg  setup.py  test.db  tox.ini
.github/workflows/: ci.yml  pip.yml
dfgraph/: __init__.py
examples/: fill.py  search.py  test.py
requirements/: dev.in  dev.txt  docs.txt  tests.txt
src/dfgraph/: __init__.py  database.py  graph.py
tests/: conftest.py  test_database.py  test_graph.py  test_init.py  test_nodes.py  test_search.py
