[metadata]
name = dfgraph
version = attr: dfgraph.__version__
url = https://github.com/willi-z/dfgraph
project_urls =
    # Donate = https://palletsprojects.com/donate
    # Documentation = https://flask.palletsprojects.com/
    # Changes = https://flask.palletsprojects.com/changes/
    Source Code = https://github.com/willi-z/dfgraph/
    Issue Tracker = https://github.com/willi-z/dfgraph/issues/
    # Twitter = https://twitter.com/PalletsTeam
    # Chat = https://discord.gg/pallets
license = BSD-3-Clause
author = Willi Zschiebsch
author_email = willi.w.zschiebsch@web.de
maintainer = DigiFors Gmbh
maintainer_email = contact@palletsprojects.com
description = A simple directed graph based, non-typed, but flaggable database system.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    # Framework :: SQLAlchemie
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

#[options.entry_points]
#console_scripts =
#    flask = flask.cli:main

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    dfgraph
    tests

[coverage:paths]
source =
    src
    # */site-packages
